# minecraft-clone-cpp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
res/shaders/: chunk.frag.glsl  chunk.vert.glsl
src/: Blocks.cpp  Blocks.hpp  Camera.cpp  Camera.hpp  Chunk.cpp  Chunk.hpp  ChunkData.cpp  ChunkData.hpp  ChunkMesh.cpp  ChunkMesh.hpp  Main.cpp  Shader.cpp  Shader.hpp
